# MovieAI

./: .env.copy  .gitignore  README.md  pyproject.toml  requirements.txt
data/output/: enriched_movies.db
notebook/: experiments.ipynb
src/config/: config.yaml
src/exception/: custom_exception.py
src/logger/: __init__.py  logger.py
src/model/: model.py
src/utils/: config_loader.py  model_loader.py
